app/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: fiber-optic-network-service
  namespace: fiber-optic
  labels:
    app: fiber-optic-network-service
    app.kubernetes.io/component: fiber-optic-network-service
    app.kubernetes.io/instance: fiber-optic-network-service
spec:
  to:
    kind: Service
    name: fiber-optic-network-service
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
status:
  ingress:
      routerName: default
      wildcardPolicy: None
